syntax = "proto3";

option csharp_namespace = "Discount.grpc.Protos";

service DiscountProtoService{
  rpc GetDiscount(GetDiscountRequest) returns (CouponModel);
  
  rpc CreateDiscount(CreateDiscountRequest) returns (CouponModel);
  rpc UpdateDiscount(UpdateDiscountRequest) returns (CouponModel);
  rpc DeleteDiscount(DeleteDiscountRequest) returns (DeleteDiscountResponse);
}

message GetDiscountRequest{
  string couponName = 1;
}

message CouponModel{
  int32 id = 1;
  string couponName = 2;
  int32 valueInPercent = 3;
}

message CreateDiscountRequest{
  CouponModel coupon = 1;
}

message UpdateDiscountRequest{
  CouponModel coupon = 1;
}

message DeleteDiscountRequest{
  string couponName = 1;
}

message DeleteDiscountResponse{
  bool success = 1;
}
